ran code through HTML verify and issues with internal buttons as wrapped A tag within button, deleted button tage and restyle

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -256,10 +256,12 @@ nav a:hover {
     align-items: space-between;
     gap: 10px;
     width: 100%;
+    height: 100px;
+    margin-top: 20px;
 }
 
 .meet-button,
-.prices-button {
+.prices-button  {
     border-radius: 40px;
     background-color: rgba(26, 42, 90, .8);
     border: none;
@@ -268,9 +270,9 @@ nav a:hover {
     font-family: Dosis, sans-serif;
     font-size: 28px;
     padding: 10px;
-    width: 250px;
+    width: 280px;
     margin: 50px 30px;
-    box-shadow: 0 6px #999;
+    
 }
 
 .sign-button {
@@ -282,18 +284,14 @@ nav a:hover {
     font-family: Dosis, sans-serif;
     font-size: 28px;
     padding: 10px;
-    width: 250px;
+    width: 280px;
     margin: 50px 10px;
-    box-shadow: 0 6px #999;
+    
 }
 
 /*-- buttons animation--*/
 
-.meet-button:hover {
-    background-color: rgba(1, 14, 53, 0.8);
-}
-
-.prices-button:hover {
+.meet-button:hover, .prices-button:hover {
     background-color: rgba(1, 14, 53, 0.8);
 }
 
@@ -301,44 +299,14 @@ nav a:hover {
     background-color: #dbbb02;
 }
 
-.meet-button:active {
-    background-color: rgba(1, 14, 53, 0.8);
-    box-shadow: 0 5px #666;
-    transform: translateY(5px);
+.meet-button a, .prices-button a {
     text-decoration: none;
     color: #FFD700;
-}
-
-.meet-button:visited {
-    text-decoration: none;
-    color: #FFD700;
-}
-
-.meet-button a {
-    text-decoration: none;
-    color: #FFD700;
-}
-
-.prices-button:active {
-    background-color: rgba(1, 14, 53, 0.8);
-    box-shadow: 0 5px #666;
-    transform: translateY(5px);
 }
 
 .prices-button:visited {
     text-decoration: none;
     color: #FFD700;
-}
-
-.prices-button a {
-    text-decoration: none;
-    color: #FFD700;
-}
-
-.sign-button:active {
-    background-color: #dbbb02;
-    box-shadow: 0 5px #666;
-    transform: translateY(5px);
 }
 
 .sign-button:visited {
